Release 0.3.2 source and build documentation
